--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Movies App</string>
+
+    <string name="movie_public">Public</string>
+
+    <string name="movie_top_rated">Top Rated</string>
 </resources>
